--- a/src/styles/_mobileStyles.scss
+++ b/src/styles/_mobileStyles.scss
@@ -43,13 +43,14 @@
   }
 
   .titleBcg {
-    height: 17vh;
-    width: 98vw;
+    height: 115px;
+    width: 95vw;
+    margin-top: 60px;
   }
 
   .searchBarBcg {
     height: 60px;
-    width: 75vw;
+    width: 85vw;
   }
 
   .searchIcon {
