--- a/src/styles/_searchBar.scss
+++ b/src/styles/_searchBar.scss
@@ -17,7 +17,7 @@
 
 .searchBarBcg {
   height: 100px;
-  width: 350px;
+  width: 465px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
   border-radius: 50px;
   display: block;
