--- a/src/styles/_tabletStyles.scss
+++ b/src/styles/_tabletStyles.scss
@@ -44,8 +44,9 @@
     }
 
     .titleBcg {
-      height: 22vh;
+      height: auto;
       width: 80vw;
+      margin-top: 200px;
     }
 
     .searchBarBcg {
